--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,18 @@ div#second {
     overflow: auto;
 
 }
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #67645e;
+}
+
+.flex-container>div {
+    background-color: #67645e;
+    width: 100px;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+}
