--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,168 @@
 body {
     background-color: #67645e;
+
 }
 
-h1 {
-    color: #d1f0fd;
-    margin-left: 30px;
+* {
+    box-sizing: border-box;
 }
 
-h4 {
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.col-1 {
+    width: 8.33%;
+}
+
+.col-2 {
+    width: 16.66%;
+}
+
+.col-3 {
+    width: 25%;
+}
+
+.col-4 {
+    width: 33.33%;
+}
+
+.col-5 {
+    width: 41.66%;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+.col-7 {
+    width: 58.33%;
+}
+
+.col-8 {
+    width: 66.66%;
+}
+
+.col-9 {
+    width: 75%;
+}
+
+.col-10 {
+    width: 83.33%;
+}
+
+.col-11 {
+    width: 91.66%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
+[class*="col-"] {
+    float: left;
+    border: 1px solid #67645e
+}
+
+.header {
+    position: sticky;
+    top: 0;
+    border: none;
+    background: #67645e;
     color: #d1f0fd;
     font-family: sans-serif;
-    margin-left: 30px;
 }
 
-img {
-    max-width: 99%;
-    max-height: 99%;
+hr {
+    border: solid #d1f0fd;
 }
 
-img:hover {
-    opacity: 0.8;
-}
-
-div#first {
-    height: 644px;
-    width: 472px;
-    position: static;
-    top: 59px;
-    right: 50px;
-    object-fit: contain;
-    overflow: auto;
-}
-
-div#second {
-    height: 528px;
-    width: 870px;
-    position: static;
-    top: 175px;
-    object-fit: contain;
-    overflow: auto;
+.p1 {
+    font-size: larger;
+    font-family: sans-serif;
+    color: #d1f0fd;
 
 }
 
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #67645e;
+.p2 {
+    font-family: sans-serif;
+    color: #d1f0fd;
+    font-size: large;
+
 }
 
-.flex-container>div {
-    background-color: #67645e;
-    width: 100px;
-    margin: 10px;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
+.p2#p2 {
+    float: right;
+}
+
+
+.col-6 {
+    width: 50%;
+    height: 50%;
+}
+
+.col-6 img {
+    width: 50%;
+    height: 50%;
+    object-fit: cover;
+    float: right
+}
+
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+
+    /* For desktop: */
+    .col-1 {
+        width: 8.33%;
+    }
+
+    .col-2 {
+        width: 16.66%;
+    }
+
+    .col-3 {
+        width: 25%;
+    }
+
+    .col-4 {
+        width: 33.33%;
+    }
+
+    .col-5 {
+        width: 41.66%;
+    }
+
+    .col-6 {
+        width: 50%;
+    }
+
+    .col-7 {
+        width: 58.33%;
+    }
+
+    .col-8 {
+        width: 66.66%;
+    }
+
+    .col-9 {
+        width: 75%;
+    }
+
+    .col-10 {
+        width: 83.33%;
+    }
+
+    .col-11 {
+        width: 91.66%;
+    }
+
+    .col-12 {
+        width: 100%;
+    }
 }
