--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body {
 
 [class*="col-"] {
     float: left;
-    border: 1px solid #67645e
+    border: 1px solid #67645e;
 }
 
 .header {
@@ -98,14 +98,14 @@ hr {
 }
 
 
-.col-6 {
-    width: 50%;
-    height: 50%;
+.col-3 {
+    width: 100%;
+    height: 100%;
 }
 
-.col-6 img {
-    width: 50%;
-    height: 50%;
+.col-3 img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     float: right
 }
