--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ hr {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    float: right
+    float: right;
 }
 
 /* For mobile phones: */
