--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: #67645e;
-
+    margin: 0;
 }
 
 * {
@@ -63,7 +63,7 @@ body {
 
 [class*="col-"] {
     float: left;
-    border: 1px solid #67645e;
+    border: 1px solid #67645e
 }
 
 .header {
@@ -73,10 +73,12 @@ body {
     background: #67645e;
     color: #d1f0fd;
     font-family: sans-serif;
+
 }
 
 hr {
-    border: solid #d1f0fd;
+    border: 1px solid #d1f0fd;
+    margin: 0;
 }
 
 .p1 {
@@ -96,13 +98,16 @@ hr {
     float: right;
 }
 
+a {
+    color: #d1f0fd;
+}
 
-.col-3 {
+.col-4 {
     width: 100%;
     height: 100%;
 }
 
-.col-3 img {
+.col-4 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
